# compilers-manchestersyntax-compiler

./: CMakeLists.txt  README.md  lexer.l  main.cpp  token.cpp  token.h  tokengen.cpp  tokengen.h  tokens.h
tests/: 01.txt  02.txt  03.txt  04.txt  final.txt
